--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "@splinetool/react-spline": "^4.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-responsive": "^10.0.1"
+    "react-responsive": "^10.0.1",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
