--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,11 @@ dist-ssr
 # Vite
 .vite/
 
+# Env files
+.env
+.env.*
+!.env.example
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
