--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "vercel --prod"
+    "deploy": "vercel --prod",
+    "fetch:air": "node ./scripts/fetchAirQuality.mjs"
   },
   "dependencies": {
     "@react-three/drei": "^10.7.6",
