--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "vercel --prod",
-    "fetch:air": "node ./scripts/fetchAirQuality.mjs"
+    "fetch:air": "node ./scripts/fetchAirQuality.mjs",
+    "import:air": "node ./scripts/importAirQualityFromXlsx.mjs"
   },
   "dependencies": {
     "@react-three/drei": "^10.7.6",
@@ -18,7 +19,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-responsive": "^10.0.1",
-    "three": "^0.180.0"
+    "three": "^0.180.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
